--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,7 @@
-<h1>{{ 'home.welcome' | translate }} {{ user?.username ? ', ' + user.username : '' }}!</h1>
+<h1>
+    {{ 'home.welcome' | translate }}
+    <ng-container *ngIf="user?.username">, {{ user.username }}</ng-container>!
+  </h1>
 
 <app-client-home *ngIf="userRole === UserType.CLIENT" />
 <app-operator-home *ngIf="userRole === UserType.OPERATOR" />
