--- a/src/app/pages/home/operator-home/operator-home.component.html
+++ b/src/app/pages/home/operator-home/operator-home.component.html
@@ -1,15 +1,20 @@
 <div class="container" *ngIf="!isLoading">
-  <app-dashboard-card  (click)="openClientsModal()" icon="support_agent" [end]="countCompanies" [duration]="1200" [label]="'home.components.client' | translate" color="#f20f40">
+  <app-dashboard-card (click)="openClientsModal()" icon="support_agent" [end]="countCompanies" [duration]="1200"
+    [label]="'home.components.client' | translate" color="#f20f40">
   </app-dashboard-card>
 
-  <app-dashboard-card icon="calls" [end]="countOpenCalls" [duration]="1200" [label]="'home.components.ticket-open' | translate" color="#3f51b5">
+  <app-dashboard-card (click)="openCallsModal('open')" icon="calls" [end]="countOpenCalls" [duration]="1200"
+    [label]="'home.components.ticket-open' | translate" color="#3f51b5">
   </app-dashboard-card>
 
-  <app-dashboard-card icon="headset_mic" [end]="countClosedCalls" [duration]="1200" [label]="'home.components.ticket-closed' | translate" color="#4caf50">
+  <app-dashboard-card (click)="openCallsModal('closed')" icon="headset_mic" [end]="countClosedCalls" [duration]="1200"
+    [label]="'home.components.ticket-closed' | translate" color="#4caf50">
   </app-dashboard-card>
 
-  <app-dashboard-card icon="headset_off" [end]="countAllCalls" [duration]="1200" [label]="'home.components.ticket-answered' | translate" color="#ff9800">
+  <app-dashboard-card (click)="openCallsModal('all')" icon="headset_off" [end]="countAllCalls" [duration]="1200"
+    [label]="'home.components.ticket-answered' | translate" color="#ff9800">
   </app-dashboard-card>
+
 </div>
 
 <!-- Exibe loading opcionalmente -->
@@ -23,8 +28,7 @@
 <div class="chart-container">
   <app-chart [type]="ChartType.BAR" [title]="'charts.barChart.title' | translate" [chamados]="chamadosMock"></app-chart>
 
-  <app-pie-chart [title]="'charts.pieChart.title' | translate" 
-    [data]="pieChartData">
+  <app-pie-chart [title]="'charts.pieChart.title' | translate" [data]="pieChartData">
   </app-pie-chart>
 
 
